--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 
     <div>footer</div>
 
+    <form>
+        <input type="email" placeholder="email">
+        <br/>
+        <br/>
+        <input type="password" placeholder="password">
+        <br>
+        <br>
+        <button>Login</button>
+    </form>
+
 
 </body>
 
